# deptracker

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deptracker/: __init__.py  alignment.py  classify.py  cli.py  diagnose.py  diffutils.py  discover.py  enrich.py  gold.py  parse.py  sq1_analysis.py  sq2_strata.py  store.py  supersession.py
deptracker/adapters/: __init__.py  base.py  cargo.py  go.py  maven.py  npm.py  pip.py
tests/: test_alignment.py  test_classify.py  test_diagnose.py  test_enrich.py  test_gold.py  test_label.py  test_parse.py  test_sq1_analysis.py  test_sq2_strata.py  test_store.py  test_supersession.py
tests/adapters/: test_cargo.py  test_go.py  test_maven.py  test_npm.py  test_pip.py
tests/adapters/fixtures/: cargo_lock_bump.diff  cargo_lock_partial_bump.diff  cargo_simple_bump.diff  go_simple_bump.diff  gradle_kts_simple_bump.diff  gradle_simple_bump.diff  maven_property_bump.diff  maven_simple_bump.diff  npm_package_lock_bump.diff  npm_package_lock_legacy_bump.diff  npm_package_lock_partial_bump.diff  npm_partial_delete_only.diff  npm_partial_dev_bump.diff  npm_simple_bump.diff  pip_simple_bump.diff  pipfile_lock_bump.diff  poetry_lock_bump.diff
